# chesstagcql

./: LICENCE  README  pyproject.toml
chesstagcql/: __init__.py  chessgames.py  chessgames_winedptchunk.py  chessgames_winedptmulti.py
chesstagcql/basecore/: cqlds.py  cqlgames.py
chesstagcql/core/: __init__.py  export_game.py
chesstagcql/cql/: querycontainer.py  queryevaluator.py
chesstagcql/gui/: __init__.py  chess.py  chess_ui.py  cqldbedit.py  cqldelete.py  cqldisplay.py  cqlgrid.py  cqlinsert.py  cqlrow.py  cqlupdate.py  displaypgn.py  displaytext.py  eventspec.py  gamedisplay.py  gamegrid.py  gamelistgrid.py
chesstagcql/help_/: __init__.py  aboutchesstagcql.rst  chesstagcql.rst  filesize.rst  guide.rst  selection.rst
pylint/: pylint.conf
